--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="java.js"></script>
+    <script src="arreglos.js"></script>
 </head>
 <body>
     
